# geoGPT

./: .gitignore  README.md  pyproject.toml
geogpt/: main.py  test_main.py
